# vertex-ai-samples

./: .gitignore  README.md  beans_class_pipelines.yaml  generate_fictional_pdfs.py  page.html
adk-ui-explorer/: agent_config.py  main.py  pyproject.toml
adk-ui-explorer/static/: index.html
antigravity/internal_components_portal/: .gitignore  README.md  implementation_plan.md  pyproject.toml  start_backend.sh
antigravity/openrouter_tracker/: .dockerignore  .gcloudignore  Dockerfile  README.md  api.py  bigquery_sync.py  config.json  deploy.sh  get_models.py  models.json  page_providers.html  page_rendered.html  page_scrolled.html  pyproject.toml  requirements.txt  scraper.py  sheets.py  tracker.py
antigravity/sharepoint_doc_restructure_portal/: ACL_MAPPING.md  GCP_ARCHITECTURE.md  LOW_LEVEL_DESIGN.md  PERFORMANCE_AUDIT.md  README.md  UI_SPECIFICATION.md  destroy_gcp_resources.sh  pyproject.toml  start_portal.sh
antigravity/veo_video_gen/: .gitignore  agent.py  debug_agent.py  debug_veo.py  main.py  pyproject.toml  test_auth.py  test_veo_op.py  video_tools.py
antigravity/zero_leak_security_proxy/: FIX.md  README.md  latency_troubleshooting_and_optimizations.md  main.py  mcp_server.md  pyproject.toml
classificator_mcp_sharepoint/: .gitignore  README.md  pyproject.toml  sharepoint_discovery.py
factset-agent-engine/: README.md  pyproject.toml
factset-agent-engine/adk_agent/: agent.py  deploy.py
factset-agent-engine/factset_server/: Dockerfile  requirements.txt  server.py
factset-agent-engine/ui_backend/: main.py
gemini-cli/: pyproject.toml  test_converse.py  test_stream_answer.py
gemini-cli/agent-engine-toolkit/: README.md  STRESS_TEST_REPORT.md  deploy.py  main.py  manage.py  pyproject.toml  stress_test.py
gemini-cli/ge_api_lab/: README.md  how_to_use_the_api.md  method1_rag_answer.py  method2_agentic_assist.py
gemini-cli/gemini_enterprise_api/: GEMINI_CAPABILITIES_REPORT.md  GEMINI_ENTERPRISE_DEEP_DIVE.md  GEMINI_ENTERPRISE_FULL_SPECTRUM_REPORT.md  GEMINI_ENTERPRISE_MASTER_REPORT.md  README.md  invoke_agent_eng_spa.py  main.py  pyproject.toml
gemini-cli/tools_optional/: test_assist_payload.py  test_long_query.py
gen_ai/: Dockerfile  Main.py  README.md  [Main].py  chat-bison-001.py  content_classification[PaLM].ipynb  image_embedding.ipynb  image_gen.ipynb  layoutforvqa.ipynb  lchain_embedding.ipynb  main.py  mg_bert.py  model_garden_bert.py  model_garden_stable_diffusion.ipynb  pyproject.toml  requirements.txt  vilt_vqa.ipynb
gen_ai/.devcontainer/: devcontainer.json
gen_ai/agentspace/: front.py
gen_ai/assistance_to_create_profiles/: Dockerfile  ai.py  profiling.py
gen_ai/bigquery_llm/: Dockerfile  app.py  bq_langchain_llm_Q&A_sql.py  bq_langchain_llm_emb.py  bq_llm.py  bq_llm_delos_nolangchain.py
gen_ai/conversational/: main.py  readme.md  requirements.txt
gen_ai/conversational_agent/: readme.md
gen_ai/crewai/: main.py  requirements.txt  search_analysis_agents.py  search_analysis_tasks.py  search_tools.py
gen_ai/data_preprocessing/: creating_synthetic_data.py  dialogflow_conversational_agents.py  readme.md
gen_ai/demos/: getting_started.ipynb
gen_ai/drafts/: llm7b_lora.yaml
gen_ai/enterprise_search_llm/: [ES_Demo]_Grounding_Generative_AI_using_Enterprise_Search.ipynb  es_llm.py  es_llm_movies_wlangchain.py  es_llm_request_form.py  es_llm_revenue_nolangchain.py
gen_ai/flet/: ask_your_doc.py  chatbot_google.py
gen_ai/forecasting/: llm.py
gen_ai/foundation_models/: content_classification.ipynb  genai.py  syntax_analysis.py
gen_ai/foundational_models_test/: chat-bison-001.py  image_embedding.ipynb  new_prompt_compare_genstudio.py
gen_ai/gemini_tools/: google_ground.py  preprocess_questions_1_2.py  reasoning_engine.py  utils.py
gen_ai/images_matching_engine/: dataset-prep.py
gen_ai/lang_chain/: intent_detection_generate_new_questions.py
gen_ai/langchain/: gemini_pro.py  lchain_embeddings.ipynb
gen_ai/llama2-q|vertex/: README.md  main.py
gen_ai/model_garden/: image_gen.ipynb  layoutforvqa.ipynb  model_garden_stable_diffusion.ipynb  vilt_vqa.ipynb
gen_ai/oss_llm/: Note.md  vertexai_job.py
gen_ai/pages/: Analytics_[BigQuery].py  Any_Doc_RAG[any-palm-model].py  Any_Question_ReAct[vsearch_crewai].py  BigFiles_[Gemini].py  BigFiles_[bison-32k].py  Bison_32K.py  Caregiver_Bio_Gen[text-bison].py  Contextual_Search[mmodal_emb].py  Culture_ReACT[vsearch_unicorn].py  Culture_ReAct[vsearch_unicorn].py  Financial_RAG_[Vertex_Search].py  Financial_RAG_[gecko-emb].py  Gemini.py  Image_QnA_Gemini_MultiModal.py  Image_QnA_[vision].py  Imagen.py  Knowledge_Base[Vertex_Search].py  Movies_QnA_[Enterprise_Search].py  Movies_QnA_[Vertex_Search].py  Multi_Intent_Chatbot[LangChain-Memory].py  News_RAG_[Vertex_Search].py  News_RAG_[Vertex_Search][Conversational].py  RAG_[mmodal_emb].py
gen_ai/profiling/: ai.py  cred.yaml
gen_ai/profiling_chain/: ai.py  firestore.py  gen_copy.py  profiling.py  utils.py  web-app.py
gen_ai/prompt_examples/: prompt.py
gen_ai/rag/: open_ai_gpt.py  rag_pgvector_while_query.py  rag_pgvector_while_query_script.py  rag_pgvector_while_query|streamlit.py  rag_upload_while_query_openai|gradio.py  rag_upload_while_query_vertex.py  requirements.txt
gen_ai/stable-diff-m/: Dockerfile  front.py  main.py  testing.py  vertex_job_run.py
gen_ai/stable-diff-upload/: uploadjob.py
gen_ai/streamlit_website/: Dockerfile  Image_QnA_[vision].py  analytics_bq.py  ask_your_doc.py  ask_your_doc_functions.py  ask_your_doc_multimodal_gemini.py  ask_your_doc_rag_lang.py  ask_your_image.py  ask_your_task_functions.py  ask_your_tax.py  ask_your_tax_functions.py  ask_your_tax_gemini.py  crewai_qa.py  culture_react.py  ent_caregiver_bio.py  fin_rag_diy.py  fin_rag_oob.py  google_analytics.html  home.py  main.py  med_contex_search.py  movies_qa.py  news_chatbot.py  news_conv_elpais_qa.py  news_elpais_qa.py  passcode.py  reading_35_pages.py  requirements.txt  testing.py  testing2.py
gen_ai/text-to-image/: mg-stable-dif.py
gen_ai/tmp/: asu-test-working2.jsonl  blocking_1.py  blocking_2.py  calculator_tool.py  container.py  (+19 more)
(+4832 files in other folders)
