[project]
name = "classificator-mcp-sharepoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.23.0",
    "google-cloud-aiplatform>=1.136.0",
    "markitdown[all]>=0.1.4",
    "msal>=1.34.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
