[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]==0.28.3",
    "google-adk>=1.5.0",
    "google-genai>=1.27.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "toolbox-core>=0.4.0",
]
