[project]
name = "zero-leak-security-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi>=0.135.1",
    "google-adk>=1.14.1",
    "google-cloud-discoveryengine>=0.17.0",
    "google-genai>=1.66.0",
    "jinja2>=3.1.6",
    "markitdown[all]>=0.1.5",
    "msal>=1.35.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "weasyprint>=68.1",
]
