[project]
name = "adk-drive-ae"
version = "0.1.0"
description = "ADK Drive agent on Vertex AI Agent Engine, with a custom Next.js OAuth UI that injects the user's Drive access token via session state."
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform[adk,agent_engines]>=1.88.0",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
