[project]
name = "adk-drive-via-appint"
version = "0.1.0"
description = "Google ADK agent that queries Google Drive via Application Integration Connectors (no Drive SDK)"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform[adk,agent_engines]>=1.88.0",
    "google-auth>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
