[project]
name = "outlook-mcp-server"
version = "0.1.0"
description = "MCP Server for Outlook Graph API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.27.0",
    "msal>=1.31.0",
    "python-dotenv>=1.0.1",
    "google-adk",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
