[project]
name = "docgen-agent"
version = "0.1.0"
description = "ADK agent: Google Search → summary + downloadable PDF artifact for Gemini Enterprise"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform[adk,agent_engines]>=1.88.0",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "reportlab>=4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[tool.uv]
package = false
