[project]
name = "gworkspace-mcp-server"
version = "0.1.0"
description = "Google Workspace MCP Server - Access Gmail, Drive, Calendar, Docs, and Sheets"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
