[project]
name = "knowledge-base-mcp"
version = "0.1.0"
description = "Knowledge Base MCP Server - Semantic search over Claude Code conversation transcripts"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-storage>=2.14.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "pipeline"]
include = ["server.py", "firestore_client.py", "embeddings.py"]
