[project]
name = "payroll-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "google-adk>=2.3.0",
    "mcp>=1.28.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
