[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "fastmcp>=3.2.0",
    "fitz>=0.0.1.dev2",
    "google-auth>=2.49.1",
    "markitdown>=0.1.5",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
