[project]
name = "cave-bot-ui"
version = "0.1.0"
description = "Structured Agentic UX Pilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "google-adk>=1.23.0",
    "google-genai>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
